<resources>
    <string name="app_name">Calculadora</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="titulo">Calculator</string>
    <string name="sumar">Add</string>
    <string name="restar">Rest</string>
    <string name="multiplicar">Mul</string>
    <string name="dividir">Div</string>
    <string name="numeroUno">Number 1</string>
    <string name="numeroDos">Number 2</string>
    <string name="resultado">Result</string>
</resources>
